[package]
name = "rwbar"
version = "0.1.0"
authors = ["René Wilhelm <rene.wilhelm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cairo-rs = { version = "0.8", features = ["xcb"] }
cairo-sys-rs = "0.9"
pango = "0.8"
pangocairo = "0.9"
tokio = { version = "0.2", features = ["full"] }
xcb = "0.9"
xcb-util = { version = "0.3", features = ["ewmh"] }
